--- a/user_config/.config/waybar/style.css
+++ b/user_config/.config/waybar/style.css
@@ -76,6 +76,7 @@
   border-bottom: 1px solid #595959;
   border-radius: 5px;
   background-color: #000000;
+  opacity: 0.8;
   color: white;
   margin-top: 10px;
   padding-left: 10px;
