--- a/user_config/.config/waybar/style.css
+++ b/user_config/.config/waybar/style.css
@@ -194,9 +194,9 @@ window#waybar.empty #window {
 }
 
 window#waybar.fullscreen #window {
-   border-color: #000000;
-   color: #000000;
-   background-color: white;
+   border-color: #191724;
+   color: #191724;
+   background-color: #e0def4;
 }
 
 
