--- a/user_config/.config/waybar/style.css
+++ b/user_config/.config/waybar/style.css
@@ -58,6 +58,7 @@
 #mode,
 #network,
 #pulseaudio,
+#wireplumber,
 #mpd,
 #window,
 #workspaces,
@@ -152,6 +153,13 @@
   color: @teal;
 }
 
+#wireplumber {
+	/*No Styles*/
+}
+
+#wireplumber.muted {
+ color:@teal;
+ }
 
 
 #temperature {
