--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -185,6 +185,7 @@ window#waybar.fullscreen #window {
 
 
 #workspaces button {
+    border-radius: 10px;
     border-top: 2px solid transparent;
     /* To compensate for the top border and still have vertical centering */
     padding-bottom: 2px;
