waybar - add text shadow

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -43,6 +43,7 @@
 #waybar {
     border-radius: 10px;
     background: transparent;
+    text-shadow: 1px 1px @crust;
     color: @text;
     font-family: Cantarell, Noto Sans, sans-serif;
     font-size: 14px;
@@ -175,12 +176,16 @@ window#waybar.empty #window {
     border: none;	
     color: transparent;
     background-color: transparent;
+    text-shadow: none;
+
 }
 
 window#waybar.fullscreen #window {
    border-color: @base;
    color: @base;
    background-color: @text;
+   text-shadow: none;
+
 }
 
 
@@ -192,6 +197,7 @@ window#waybar.fullscreen #window {
     padding-left: 5px;
     padding-right: 5px;
     color: @text;
+    text-shadow: 1px 1px @crust;
 }
 
 #workspaces button.active {
@@ -199,6 +205,8 @@ window#waybar.fullscreen #window {
     border-color: @text;
     color: @base;
     background-color: @text; 
+    text-shadow: none;
+
 }
 
 #workspaces button.urgent {
@@ -206,11 +214,12 @@ window#waybar.fullscreen #window {
     border-color: @peach;
     color: @base;
     background-color: @red;
+    text-shadow: none;
+
 }
 
 #taskbar button {
     box-shadow: none;
-	text-shadow: none;
     padding: 0px;
     border-radius: 9px;
     margin-top: 3px;
@@ -244,6 +253,7 @@ window#waybar.fullscreen #window {
     border: none;	
     color: transparent;
     background-color: transparent;
+    text-shadow: none;
 }
 
 #custom-arch {
