--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -45,6 +45,7 @@
     text-shadow: 1px 1px @crust;
     color: @text;
     font-family: Cantarell, Noto Sans, sans-serif;
+    font-weight: bold;
     font-size: 14px;
 }
 
@@ -61,7 +62,7 @@
 #taskbar,
 #tray {
   border-radius: 10px;
-  background-color: alpha(@base, 0.7);
+  background-color: alpha(@base, 0.8);
   margin-top: 5px;
   margin-bottom: 5px;
   padding-left: 10px;
@@ -166,7 +167,7 @@
 }
 
 #window {
-    font-weight:bold; 
+    /* No styles */
 }
 
 window#waybar.empty #window {
