--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -44,9 +44,10 @@
     background: transparent;
     text-shadow: 1px 1px @crust;
     color: @text;
-    font-family: Cantarell, Noto Sans, sans-serif;
-    font-weight: bold;
-    font-size: 14px;
+    font-family: Fira Code, Noto Sans, sans-serif;
+    font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+    /*font-weight: bold;*/
+    font-size: 16px;
 }
 
 /* Each module */
